# kommit

./: .craft.ini  .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CMakePresets.json  ChangeLogs.txt  Findgit2.cmake  Messages.sh  README.md  change.py  config-kommit.h.in  kommit.debugger  snapcraft.yaml
dolphinplugins/: CMakeLists.txt  actionmanager.cpp  actionmanager.desktop  actionmanager.h  actions.h  dolphinplugin.cpp  dolphinplugin.h  gitklientitemaction.json  gitklientoverlayplugin.json  komitdolphinplugin.json  kommititemaction.json  kommitoverlayplugin.json  manager.cpp  manager.h  overlayplugin.cpp  overlayplugin.h  statuscache.cpp  statuscache.h
dolphinplugins/autotests/: CMakeLists.txt  gittestmanager.cpp  gittestmanager.h  overlaytest.cpp  overlaytest.h
src/: CMakeLists.txt  appconfig.cpp  appconfig.h  appwindow.cpp  appwindow.h  buttonsgroup.cpp  buttonsgroup.h  commandargsparser.cpp  commandargsparser.h  diffwindow.cpp  diffwindow.h  gitklient.qrc  gitklientmergeview.ui  main.cpp  mainwidget.cpp  mainwidget.h  mergewindow.cpp  mergewindow.h  multipagewidget.cpp  multipagewidget.h  org.kde.gitklient.appdata.xml  org.kde.gitklient.desktop  org.kde.gitklient.diff.desktop  org.kde.gitklient.merge.desktop  widgetbase.cpp  widgetbase.h
src/actions/: abstractactions.cpp  abstractactions.h  branchactions.cpp  branchactions.h  changedfileactions.cpp  changedfileactions.h  commitactions.cpp  commitactions.h  fileactions.cpp  fileactions.h  remotesactions.cpp  remotesactions.h  stashactions.cpp  stashactions.h  submoduleactions.cpp  submoduleactions.h  tagsactions.cpp  tagsactions.h
src/apps/: CMakeLists.txt  main.cpp
src/core/: appdialog.cpp  appdialog.h  appmainwindow.cpp  appmainwindow.h  commitsfiltermodel.cpp  commitsfiltermodel.h  listview.cpp  listview.h  pushbutton.cpp  pushbutton.h  treeview.cpp  treeview.h  treewidget.cpp  treewidget.h
src/data/: CMakeLists.txt  kommitdiff.sh  kommitmerge.sh  org.kde.gitklient.appdata.xml  org.kde.gitklient.desktop  org.kde.gitklient.diff.desktop  org.kde.gitklient.merge.desktop  org.kde.kommit.appdata.xml  org.kde.kommit.desktop  org.kde.kommit.diff.desktop  org.kde.kommit.merge.desktop
src/dialogs/: changedfilesdialog.cpp  changedfilesdialog.h  changedfilesdialog.ui  clonedialog.cpp  clonedialog.h  clonedialog.ui  commitpushdialog.cpp  commitpushdialog.h  diffdialog.cpp  diffdialog.h  diffopendialog.cpp  diffopendialog.h  fetchdialog.cpp  fetchdialog.h  fileblamedialog.cpp  fileblamedialog.h  filehistorydialog.cpp  filehistorydialog.h  filestreedialog.cpp  filestreedialog.h  fileviewerdialog.cpp  fileviewerdialog.h  ignorefiledialog.cpp  ignorefiledialog.h  initdialog.cpp  initdialog.h  mergecloseeventdialog.cpp  mergecloseeventdialog.h  mergedialog.cpp  mergedialog.h  mergedialog.ui  mergeopenfilesdialog.cpp  mergeopenfilesdialog.h  modificationsdialog.cpp  modificationsdialog.h  notedialog.cpp  notedialog.h  pulldialog.cpp  pulldialog.h  reposettingsdialog.cpp  (+16 more)
src/diff/: codeeditordocument.cpp  codeeditordocument.h  diff.cpp  diff.h  segmentsmapper.cpp  segmentsmapper.h
src/git/: CMakeLists.txt  blamedata.cpp  blamedata.h  branch.cpp  branch.h  filestatus.cpp  filestatus.h  gitfile.cpp  gitfile.h  gitglobal.cpp  gitglobal.h  gitgraphlane.cpp  gitgraphlane.h  gitlog.cpp  gitlog.h  gitloglist.cpp  gitloglist.h  gitmanager.cpp  gitmanager.h  gitremote.cpp  gitremote.h  gitsubmodule.cpp  gitsubmodule.h  gittag.cpp  gittag.h  nonemptylinescommand.cpp  nonemptylinescommand.h  parameterescommand.cpp  parameterescommand.h  stash.cpp  stash.h
src/gui/: CMakeLists.txt  appconfig.cpp  appconfig.h  appwindow.cpp  appwindow.h  buttonsgroup.cpp  buttonsgroup.h  changelogsdata.cpp  changelogsdata.h  changelogsdialog.cpp  changelogsdialog.h  changelogsdialog.ui  commandargsparser.cpp  commandargsparser.h  commandpullwidget.ui  diffwindow.cpp  diffwindow.h  gitklientmergeui.rc  gitklientmergeview.ui  gitklientui.rc  kommit.qrc  kommitdiffui.rc  kommitfileviewerui.rc  kommitmergeui.rc  kommitui.rc  libgitklientgui_private_export.h  libkommitgui_private_export.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  mergewindow.cpp  mergewindow.h  multipagewidget.cpp  multipagewidget.h  multipagewidget.ui  themeiconprovider.cpp  themeiconprovider.h  widgetbase.cpp  widgetbase.h
src/libgitklient/: CMakeLists.txt  blamedata.cpp  blamedata.h  filestatus.cpp  filestatus.h  gitfile.cpp  gitfile.h  gitglobal.cpp  gitglobal.h  gitgraphlane.h  gitlog.cpp  gitlog.h  gitloglist.cpp  gitloglist.h  gitmanager.cpp  gitmanager.h  gitremote.cpp  gitremote.h  gitsubmodule.cpp  gitsubmodule.h  gittag.cpp  gittag.h  libgitklient_private_export.h  nonemptylinescommand.cpp  nonemptylinescommand.h  stash.cpp  stash.h
src/libgitklientdiff/: CMakeLists.txt  array.h  diff.cpp  diff.h  lcs.cpp  lcs.h  pair.cpp  pair.h  results.cpp  results.h  segments.cpp  segments.h  solution.cpp  solution.h  text.cpp  text.h  types.h
src/libkommit/: CMakeLists.txt  abstractcache.cpp  abstractcache.h  abstractreference.cpp  abstractreference.h  blame.cpp  blame.h  blamedata.cpp  blamedata.h  blamehunk.cpp  blamehunk.h  branch.cpp  branch.h  buffer.cpp  buffer.h  certificate.cpp  certificate.h  clone.cpp  clone.h  commit.cpp  commit.h  config.cpp  config.h  credential.cpp  credential.h  diffdelta.cpp  diffdelta.h  error.cpp  error.h  fetch.cpp  fetch.h  filedelta.cpp  filedelta.h  filemode.cpp  filemode.h  filestatus.cpp  filestatus.h  gitfile.cpp  gitfile.h  gitglobal.cpp  (+45 more)
src/libkommitdiff/: CMakeLists.txt  array.cpp  array.h  diff.cpp  diff.h  diff2.cpp  diff2.h  diff3.cpp  diff3.h  hunk.cpp  hunk.h  lcs.cpp  lcs.h  pair.cpp  pair.h  results.cpp  results.h  segments.h  solution.cpp  solution.h  text.cpp  text.h  types.h
src/libkommitwidgets/: CMakeLists.txt  gitgraphlane.cpp  gitgraphlane.h  kommitwidgetsglobaloptions.cpp  kommitwidgetsglobaloptions.h
src/merge/: closeeventdialog.cpp  closeeventdialog.h  openfilesdialog.cpp  openfilesdialog.h
src/models/: difftreemodel.cpp  difftreemodel.h  filesmodel.cpp  (+5 more)
(+845 files in other folders)
